--- a/lista-alumnos.html
+++ b/lista-alumnos.html
@@ -5,8 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Lista de Alumnos • Graduación 2025</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Bebas+Neue&display=swap" rel="stylesheet">
-  
-  <!-- Librería para exportar a Excel (gratis y sin servidor) -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
 
   <style>
@@ -39,103 +37,44 @@
       padding:50px 20px;
       text-align:center;
     }
-    .header h1 {
-      font-family:'Bebas Neue',sans-serif;
-      font-size:52px;
-      color:var(--gold);
-      text-shadow:0 4px 20px rgba(0,0,0,0.8);
-      letter-spacing:3px;
-    }
+    .header h1 { font-family:'Bebas Neue',sans-serif; font-size:52px; color:var(--gold); text-shadow:0 4px 20px rgba(0,0,0,0.8); }
     .header p { font-size:19px; margin-top:10px; opacity:0.95; }
 
     .content { padding:40px; }
 
     .controls {
       display:flex; justify-content:space-between; align-items:center;
-      flex-wrap:wrap; gap:20px;
-      margin-bottom:40px;
+      flex-wrap:wrap; gap:20px; margin-bottom:40px;
     }
     select {
-      padding:16px 28px;
-      font-size:18px;
-      border-radius:16px;
-      border:none;
-      background:white;
-      color:var(--text);
-      box-shadow:0 10px 30px rgba(0,0,0,0.3);
-      min-width:380px;
-      cursor:pointer;
-      font-weight:500;
+      padding:16px 28px; font-size:18px; border-radius:16px; border:none;
+      background:white; color:var(--text); box-shadow:0 10px 30px rgba(0,0,0,0.3);
+      min-width:380px; cursor:pointer; font-weight:500;
     }
     select:focus { outline:none; box-shadow:0 0 0 5px rgba(99,102,241,0.4); }
 
     .btn-excel {
-      padding:16px 32px;
-      background:var(--gold);
-      color:black;
-      border:none;
-      border-radius:16px;
-      font-size:18px;
-      font-weight:bold;
-      cursor:pointer;
-      box-shadow:0 10px 30px rgba(255,215,0,0.4);
-      transition:all 0.3s;
+      padding:16px 32px; background:var(--gold); color:black; border:none;
+      border-radius:16px; font-size:18px; font-weight:bold; cursor:pointer;
+      box-shadow:0 10px 30px rgba(255,215,0,0.4); transition:all 0.3s;
     }
-    .btn-excel:hover {
-      transform:translateY(-4px);
-      box-shadow:0 15px 35px rgba(255,215,0,0.6);
-    }
+    .btn-excel:hover { transform:translateY(-4px); box-shadow:0 15px 35px rgba(255,215,0,0.6); }
 
-    h3 {
-      text-align:center;
-      margin:30px 0 25px;
-      font-size:30px;
-      color:var(--gold);
-      font-weight:bold;
-    }
+    h3 { text-align:center; margin:30px 0 25px; font-size:30px; color:var(--gold); font-weight:bold; }
 
     table {
-      width:100%;
-      border-collapse:collapse;
-      background:white;
-      color:var(--text);
-      border-radius:18px;
-      overflow:hidden;
-      box-shadow:0 15px 40px rgba(0,0,0,0.4);
-      margin:20px 0;
+      width:100%; border-collapse:collapse; background:white; color:var(--text);
+      border-radius:18px; overflow:hidden; box-shadow:0 15px 40px rgba(0,0,0,0.4); margin:20px 0;
     }
-    th {
-      background:var(--red-main);
-      color:white;
-      padding:20px;
-      text-align:left;
-      font-size:17px;
-      font-weight:600;
-    }
-    td {
-      padding:18px 20px;
-      border-bottom:1px solid #eee;
-      font-size:16px;
-    }
+    th { background:var(--red-main); color:white; padding:20px; text-align:left; font-size:17px; font-weight:600; }
+    td { padding:18px 20px; border-bottom:1px solid #eee; font-size:16px; }
     tr:hover { background:#f8f9fa; }
 
-    .total {
-      text-align:center;
-      margin-top:35px;
-      font-size:24px;
-      color:var(--gold);
-      font-weight:bold;
-    }
-
+    .total { text-align:center; margin-top:35px; font-size:24px; color:var(--gold); font-weight:bold; }
     .no-data { text-align:center; padding:80px 20px; color:#aaa; font-size:22px; }
     .loader { text-align:center; padding:80px; font-size:26px; color:var(--gold); }
 
-    footer {
-      text-align:center;
-      padding:40px;
-      color:rgba(255,255,255,0.8);
-      font-size:15px;
-    }
+    footer { text-align:center; padding:40px; color:rgba(255,255,255,0.8); font-size:15px; }
 
     @media (max-width:768px) {
       .controls { flex-direction:column; }
@@ -167,14 +106,12 @@
           <option>Otra</option>
         </select>
 
-        <button class="btn-excel" id="exportarExcel">
-          Descargar Excel
-        </button>
+        <button class="btn-excel" id="exportarExcel">Descargar Excel</button>
       </div>
 
       <h3 id="tituloTabla">Todos los alumnos registrados</h3>
 
-      <div id="loader" class="loader">Cargando alumnos registrados...</div>
+      <div id="loader" class="loader">Cargando alumnos desde la base de datos...</div>
 
       <table id="tablaAlumnos" style="display:none;">
         <thead>
@@ -193,99 +130,114 @@
 
     <footer>
       Sistema de Boletos • Graduación 2025<br>
-      Desarrollado con amor para la mejor generación
+      Total control de registros
     </footer>
   </div>
 
   <script>
     const DB_URL = "https://boletos-66dac-default-rtdb.firebaseio.com/users.json";
     const select = document.getElementById("carreraSelect");
+    const tablaBody = document.getElementById("tablaAlumnos");
     const tablaBody = document.getElementById("tablaBody");
-    const tabla = document.getElementById("tablaAlumnos");
     const loader = document.getElementById("loader");
     const titulo = document.getElementById("tituloTabla");
     const total = document.getElementById("totalAlumnos");
     const btnExcel = document.getElementById("exportarExcel");
 
-    let alumnos = [];
-    let alumnosMostrados = [];
+    let todosLosAlumnos = [];
 
+    // CARGA LOS DATOS REALES DE TU FIREBASE
     async function cargarAlumnos() {
       try {
-        const res = await fetch(DB_URL);
-        const data = await res.json();
+        loader.textContent = "Conectando con la base de datos...";
+        const respuesta = await fetch(DB_URL);
+        
+        if (!respuesta.ok) throw new Error("Error de red");
 
-        if (!data || Object.keys(data).length === 0) {
+        const datos = await respuesta.json();
+
+        if (!datos || Object.keys(datos).length === 0) {
           loader.innerHTML = "No hay alumnos registrados todavía";
           return;
         }
 
-        alumnos = Object.values(data).map(u => ({
-          matricula: u.matricula || "—",
-          nombre: u.nombre || "Sin nombre",
-          carrera: u.carrera || "No especificada",
-          email: u.email || "Sin correo"
-        })).sort((a,b) => a.nombre.localeCompare(b.nombre));
+        // Convertir objeto de Firebase a array
+        todosLosAlumnos = Object.values(datos).map(user => ({
+          matricula: user.matricula || "—",
+          nombre: user.nombre || "Sin nombre",
+          carrera: user.carrera || "No especificada",
+          email: user.email || "Sin correo"
+        })).sort((a, b) => a.nombre.localeCompare(b.nombre));
 
-        filtrarAlumnos();
         loader.style.display = "none";
         tabla.style.display = "table";
+        actualizarTabla();
 
-      } catch (err) {
-        loader.innerHTML = "Error al conectar con la base de datos";
-        console.error(err);
+      } catch (error) {
+        console.error("Error:", error);
+        loader.innerHTML = "Error al conectar. Revisa tu internet o la URL de Firebase";
       }
     }
 
-    function filtrarAlumnos() {
-      const carrera = select.value;
-      alumnosMostrados = carrera ? alumnos.filter(a => a.carrera === carrera) : alumnos;
+    // ACTUALIZA LA TABLA SEGÚN EL FILTRO
+    function actualizarTabla() {
+      const carreraSeleccionada = select.value;
+      const alumnosFiltrados = carreraSeleccionada 
+        ? todosLosAlumnos.filter(a => a.carrera === carreraSeleccionada)
+        : todosLosAlumnos;
 
-      titulo.textContent = carrera ? `Alumnos de: ${carrera}` : "Todos los alumnos registrados";
+      titulo.textContent = carreraSeleccionada 
+        ? Alumnos de: ${carreraSeleccionada} 
+        : "Todos los alumnos registrados";
 
       tablaBody.innerHTML = "";
-      if (alumnosMostrados.length === 0) {
-        tablaBody.innerHTML = `<tr><td colspan="4" class="no-data">No hay alumnos en esta carrera</td></tr>`;
+
+      if (alumnosFiltrados.length === 0) {
+        tablaBody.innerHTML = <tr><td colspan="4" style="text-align:center; padding:60px; color:#999; font-size:18px;">No hay alumnos registrados en esta carrera</td></tr>;
       } else {
-        alumnosMostrados.forEach(a => {
-          const tr = document.createElement("tr");
-          tr.innerHTML = `
-            <td data-label="Matrícula"><strong>${a.matricula}</strong></td>
-            <td data-label="Nombre">${a.nombre}</td>
-            <td data-label="Carrera">${a.carrera}</td>
-            <td data-label="Correo">${a.email}</td>
+        alumnosFiltrados.forEach(alumno => {
+          const fila = document.createElement("tr");
+          fila.innerHTML = `
+            <td><strong>${alumno.matricula}</strong></td>
+            <td>${alumno.nombre}</td>
+            <td>${alumno.carrera}</td>
+            <td>${alumno.email}</td>
           `;
-          tablaBody.appendChild(tr);
+          tablaBody.appendChild(fila);
         });
       }
 
-      total.textContent = `Total: ${alumnosMostrados.length} alumno${alumnosMostrados.length !== 1 ? 's' : ''}`;
+      total.textContent = Total: \( {alumnosFiltrados.length} alumno \){alumnosFiltrados.length !== 1 ? 's' : ''};
     }
 
-    // EXPORTAR A EXCEL
+    // FILTRAR CUANDO CAMBIE LA CARRERA
+    select.addEventListener("change", actualizarTabla);
+
+    // EXPORTAR A EXCEL (lo que se ve en pantalla)
     btnExcel.addEventListener("click", () => {
-      if (alumnosMostrados.length === 0) {
+      if (todosLosAlumnos.length === 0) {
         alert("No hay datos para exportar");
         return;
       }
 
-      const datosExcel = alumnosMostrados.map(a => ({
-        Matrícula: a.matricula,
-        Nombre: a.nombre,
-        Carrera: a.carrera,
-        "Correo institucional": a.email
-      }));
+      const carrera = select.value || "Todos";
+      const datos = (select.value ? todosLosAlumnos.filter(a => a.carrera === select.value) : todosLosAlumnos)
+        .map(a => ({
+          Matrícula: a.matricula,
+          Nombre: a.nombre,
+          Carrera: a.carrera,
+          "Correo institucional": a.email
+        }));
 
-      const ws = XLSX.utils.json_to_sheet(datosExcel);
       const wb = XLSX.utils.book_new();
+      const ws = XLSX.utils.json_to_sheet(datos);
       XLSX.utils.book_append_sheet(wb, ws, "Alumnos");
 
-      const carrera = select.value ? select.value.replace(/ /g, "_") : "Todos";
       const fecha = new Date().toISOString().slice(0,10);
-      XLSX.writeFile(wb, `Alumnos_${carrera}_${fecha}.xlsx`);
+      XLSX.writeFile(wb, Alumnos_\( {carrera}_ \){fecha}.xlsx);
     });
 
-    select.addEventListener("change", filtrarAlumnos);
+    // INICIAR
     cargarAlumnos();
   </script>
 </body>
