--- a/lista-alumnos.html
+++ b/lista-alumnos.html
@@ -4,241 +4,308 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Lista de Alumnos • Graduación 2025</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Bebas+Neue&display=swap" rel="stylesheet">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
-
+  <link rel="manifest" href="manifest.json">
+  <link rel="apple-touch-icon" href="icon-192.png">
+  <meta name="theme-color" content="#c41b2a">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <style>
     :root {
-      --red-dark: #8B0000;
-      --red-main: #c41b2a;
-      --gold: #FFD700;
       --primary: #6366f1;
-      --text: #1e1b4b;
+      --primary-dark: #4f46e5;
+      --secondary: #ec4899;
+      --accent: #f59e0b;
+      --success: #10b981;
+      --error: #ef4444;
+      --text: #1f2937;
+      --light: #f8fafc;
     }
-    * { margin:0; padding:0; box-sizing:border-box; }
+
+    * { margin: 0; padding: 0; box-sizing: border-box; }
+
     body {
-      font-family:'Poppins',sans-serif;
-      background:linear-gradient(135deg,#0f172a,#1e293b);
-      color:white;
-      min-height:100vh;
-      padding:20px;
+      font-family: 'Poppins', sans-serif;
+      background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+      background-size: 400% 400%;
+      animation: gradientBG 15s ease infinite;
+      min-height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 20px 15px;
     }
+
+    @keyframes gradientBG {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
+    }
+
     .container {
-      max-width:1200px;
-      margin:0 auto;
-      background:rgba(255,255,255,0.1);
-      backdrop-filter:blur(20px);
-      border-radius:24px;
-      overflow:hidden;
-      box-shadow:0 25px 60px rgba(0,0,0,0.6);
+      background: rgba(255, 255, 255, 0.18);
+      backdrop-filter: blur(20px);
+      -webkit-backdrop-filter: blur(20px);
+      border: 1px solid rgba(255, 255, 255, 0.25);
+      width: 100%;
+      max-width: 900px;
+      border-radius: 28px;
+      overflow: hidden;
+      box-shadow: 0 25px 60px rgba(0,0,0,0.35);
+      position: relative;
+      z-index: 10;
     }
+
     .header {
-      background:linear-gradient(135deg,var(--red-dark),var(--red-main));
-      padding:50px 20px;
-      text-align:center;
+      background: linear-gradient(135deg, var(--primary), var(--secondary));
+      padding: 40px 30px;
+      text-align: center;
+      color: white;
     }
-    .header h1 { font-family:'Bebas Neue',sans-serif; font-size:52px; color:var(--gold); text-shadow:0 4px 20px rgba(0,0,0,0.8); }
-    .header p { font-size:19px; margin-top:10px; opacity:0.95; }
 
-    .content { padding:40px; }
-
-    .controls {
-      display:flex; justify-content:space-between; align-items:center;
-      flex-wrap:wrap; gap:20px; margin-bottom:40px;
+    .header h1 {
+      font-size: clamp(24px, 6vw, 32px);
+      font-weight: 700;
+      margin-bottom: 8px;
+      text-shadow: 0 4px 15px rgba(0,0,0,0.4);
     }
+
+    .content {
+      padding: 30px;
+      background: rgba(255,255,255,0.97);
+    }
+
+    .input-group {
+      margin-bottom: 25px;
+    }
+
+    label {
+      display: block;
+      margin-bottom: 8px;
+      color: #444;
+      font-weight: 600;
+      font-size: 16px;
+    }
+
     select {
-      padding:16px 28px; font-size:18px; border-radius:16px; border:none;
-      background:white; color:var(--text); box-shadow:0 10px 30px rgba(0,0,0,0.3);
-      min-width:380px; cursor:pointer; font-weight:500;
+      width: 100%;
+      padding: 14px 16px;
+      border: 2px solid #e2e8f0;
+      border-radius: 16px;
+      font-size: 16px;
+      background: white;
+      transition: all 0.4s ease;
+      box-shadow: 0 4px 15px rgba(0,0,0,0.06);
     }
-    select:focus { outline:none; box-shadow:0 0 0 5px rgba(99,102,241,0.4); }
 
-    .btn-excel {
-      padding:16px 32px; background:var(--gold); color:black; border:none;
-      border-radius:16px; font-size:18px; font-weight:bold; cursor:pointer;
-      box-shadow:0 10px 30px rgba(255,215,0,0.4); transition:all 0.3s;
+    select:focus {
+      outline: none;
+      border-color: var(--primary);
+      box-shadow: 0 0 0 5px rgba(99, 102, 241, 0.25);
     }
-    .btn-excel:hover { transform:translateY(-4px); box-shadow:0 15px 35px rgba(255,215,0,0.6); }
-
-    h3 { text-align:center; margin:30px 0 25px; font-size:30px; color:var(--gold); font-weight:bold; }
 
     table {
-      width:100%; border-collapse:collapse; background:white; color:var(--text);
-      border-radius:18px; overflow:hidden; box-shadow:0 15px 40px rgba(0,0,0,0.4); margin:20px 0;
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 20px;
+      background: white;
+      border-radius: 16px;
+      overflow: hidden;
+      box-shadow: 0 8px 25px rgba(0,0,0,0.1);
     }
-    th { background:var(--red-main); color:white; padding:20px; text-align:left; font-size:17px; font-weight:600; }
-    td { padding:18px 20px; border-bottom:1px solid #eee; font-size:16px; }
-    tr:hover { background:#f8f9fa; }
 
-    .total { text-align:center; margin-top:35px; font-size:24px; color:var(--gold); font-weight:bold; }
-    .no-data { text-align:center; padding:80px 20px; color:#aaa; font-size:22px; }
-    .loader { text-align:center; padding:80px; font-size:26px; color:var(--gold); }
+    th, td {
+      padding: 14px 16px;
+      text-align: left;
+      border-bottom: 1px solid #e2e8f0;
+    }
 
-    footer { text-align:center; padding:40px; color:rgba(255,255,255,0.8); font-size:15px; }
+    th {
+      background: linear-gradient(90deg, var(--primary), var(--secondary));
+      color: white;
+      font-weight: 600;
+    }
 
-    @media (max-width:768px) {
-      .controls { flex-direction:column; }
-      select, .btn-excel { min-width:100%; }
+    tr:nth-child(even) {
+      background-color: #f8fafc;
+    }
+
+    tr:hover {
+      background-color: #f1f5f9;
+    }
+
+    .loader {
+      display: none;
+      text-align: center;
+      margin: 20px 0;
+    }
+
+    .loader::after {
+      content: '';
+      width: 32px;
+      height: 32px;
+      border: 4px solid #f0f0f0;
+      border-top: 4px solid var(--primary);
+      border-radius: 50%;
+      display: inline-block;
+      animation: spin 0.8s linear infinite;
+    }
+
+    @keyframes spin {
+      to { transform: rotate(360deg); }
+    }
+
+    .message {
+      margin: 20px 0;
+      padding: 16px 20px;
+      border-radius: 16px;
+      text-align: center;
+      font-weight: 600;
+      display: none;
+      animation: slideDown 0.5s ease;
+    }
+
+    .message.error {
+      background: linear-gradient(90deg, #f8d7da, #f5b7b1);
+      color: var(--error);
+    }
+
+    @keyframes slideDown {
+      from { opacity: 0; transform: translateY(-20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    footer {
+      text-align: center;
+      padding: 20px;
+      color: rgba(255,255,255,0.9);
+      font-size: 14px;
+      font-weight: 300;
+      backdrop-filter: blur(10px);
     }
   </style>
 </head>
 <body>
-
   <div class="container">
     <div class="header">
-      <h1>LISTA DE ALUMNOS</h1>
-      <p>Graduación 2025 • Universidad del Milenio</p>
+      <h1>Lista de Alumnos</h1>
     </div>
 
     <div class="content">
-      <div class="controls">
+      <div class="input-group">
+        <label for="carreraSelect">Selecciona una carrera:</label>
         <select id="carreraSelect">
-          <option value="">Todas las carreras</option>
-          <option>Ingeniería en Sistemas</option>
-          <option>Ingeniería Industrial</option>
-          <option>Ingeniería Civil</option>
-          <option>Arquitectura</option>
-          <option>Derecho</option>
-          <option>Medicina</option>
-          <option>Psicología</option>
-          <option>Administración</option>
-          <option>Contaduría</option>
-          <option>Otra</option>
+          <option value="">-- Todas las carreras --</option>
+          <option value="Ingeniería en Sistemas">Ingeniería en Sistemas</option>
+          <option value="Ingeniería Industrial">Ingeniería Industrial</option>
+          <option value="Ingeniería Civil">Ingeniería Civil</option>
+          <option value="Arquitectura">Arquitectura</option>
+          <option value="Derecho">Derecho</option>
+          <option value="Medicina">Medicina</option>
+          <option value="Psicología">Psicología</option>
+          <option value="Administración">Administración</option>
+          <option value="Contaduría">Contaduría</option>
+          <option value="Otra">Otra</option>
         </select>
-
-        <button class="btn-excel" id="exportarExcel">Descargar Excel</button>
       </div>
 
-      <h3 id="tituloTabla">Todos los alumnos registrados</h3>
+      <div class="loader" id="loader"></div>
+      <div class="message" id="message"></div>
 
-      <div id="loader" class="loader">Cargando alumnos desde la base de datos...</div>
-
-      <table id="tablaAlumnos" style="display:none;">
-        <thead>
-          <tr>
-            <th>Matrícula</th>
-            <th>Nombre completo</th>
-            <th>Carrera</th>
-            <th>Correo institucional</th>
-          </tr>
-        </thead>
-        <tbody id="tablaBody"></tbody>
-      </table>
-
-      <div class="total" id="totalAlumnos">Total: 0 alumnos</div>
+      <div id="alumnosTableContainer">
+        <!-- Aquí se mostrará la tabla -->
+      </div>
     </div>
 
-    <footer>
-      Sistema de Boletos • Graduación 2025<br>
-      Total control de registros
-    </footer>
+    <footer>© 2025 Graduación • Todos los derechos reservados</footer>
   </div>
 
   <script>
     const DB_URL = "https://boletos-66dac-default-rtdb.firebaseio.com/users.json";
-    const select = document.getElementById("carreraSelect");
-    const tablaBody = document.getElementById("tablaAlumnos");
-    const tablaBody = document.getElementById("tablaBody");
+    const carreraSelect = document.getElementById("carreraSelect");
+    const alumnosTableContainer = document.getElementById("alumnosTableContainer");
     const loader = document.getElementById("loader");
-    const titulo = document.getElementById("tituloTabla");
-    const total = document.getElementById("totalAlumnos");
-    const btnExcel = document.getElementById("exportarExcel");
+    const messageDiv = document.getElementById("message");
 
-    let todosLosAlumnos = [];
+    function showMessage(text, type = "error") {
+      messageDiv.textContent = text;
+      messageDiv.className = "message " + type;
+      messageDiv.style.display = "block";
+      setTimeout(() => messageDiv.style.display = "none", 5000);
+    }
 
-    // CARGA LOS DATOS REALES DE TU FIREBASE
-    async function cargarAlumnos() {
+    async function getUsers() {
+      loader.style.display = "block";
       try {
-        loader.textContent = "Conectando con la base de datos...";
-        const respuesta = await fetch(DB_URL);
-        
-        if (!respuesta.ok) throw new Error("Error de red");
-
-        const datos = await respuesta.json();
-
-        if (!datos || Object.keys(datos).length === 0) {
-          loader.innerHTML = "No hay alumnos registrados todavía";
-          return;
-        }
-
-        // Convertir objeto de Firebase a array
-        todosLosAlumnos = Object.values(datos).map(user => ({
-          matricula: user.matricula || "—",
-          nombre: user.nombre || "Sin nombre",
-          carrera: user.carrera || "No especificada",
-          email: user.email || "Sin correo"
-        })).sort((a, b) => a.nombre.localeCompare(b.nombre));
-
+        const res = await fetch(DB_URL);
+        if (!res.ok) throw new Error("Error al cargar los datos");
+        const users = await res.json();
         loader.style.display = "none";
-        tabla.style.display = "table";
-        actualizarTabla();
-
-      } catch (error) {
-        console.error("Error:", error);
-        loader.innerHTML = "Error al conectar. Revisa tu internet o la URL de Firebase";
+        return users;
+      } catch (err) {
+        loader.style.display = "none";
+        showMessage("Error de conexión: " + err.message);
+        return null;
       }
     }
 
-    // ACTUALIZA LA TABLA SEGÚN EL FILTRO
-    function actualizarTabla() {
-      const carreraSeleccionada = select.value;
-      const alumnosFiltrados = carreraSeleccionada 
-        ? todosLosAlumnos.filter(a => a.carrera === carreraSeleccionada)
-        : todosLosAlumnos;
-
-      titulo.textContent = carreraSeleccionada 
-        ? Alumnos de: ${carreraSeleccionada} 
-        : "Todos los alumnos registrados";
-
-      tablaBody.innerHTML = "";
-
-      if (alumnosFiltrados.length === 0) {
-        tablaBody.innerHTML = <tr><td colspan="4" style="text-align:center; padding:60px; color:#999; font-size:18px;">No hay alumnos registrados en esta carrera</td></tr>;
-      } else {
-        alumnosFiltrados.forEach(alumno => {
-          const fila = document.createElement("tr");
-          fila.innerHTML = `
-            <td><strong>${alumno.matricula}</strong></td>
-            <td>${alumno.nombre}</td>
-            <td>${alumno.carrera}</td>
-            <td>${alumno.email}</td>
-          `;
-          tablaBody.appendChild(fila);
-        });
-      }
-
-      total.textContent = Total: \( {alumnosFiltrados.length} alumno \){alumnosFiltrados.length !== 1 ? 's' : ''};
-    }
-
-    // FILTRAR CUANDO CAMBIE LA CARRERA
-    select.addEventListener("change", actualizarTabla);
-
-    // EXPORTAR A EXCEL (lo que se ve en pantalla)
-    btnExcel.addEventListener("click", () => {
-      if (todosLosAlumnos.length === 0) {
-        alert("No hay datos para exportar");
+    function renderTable(users, carrera = null) {
+      if (!users) {
+        showMessage("No hay datos para mostrar");
         return;
       }
 
-      const carrera = select.value || "Todos";
-      const datos = (select.value ? todosLosAlumnos.filter(a => a.carrera === select.value) : todosLosAlumnos)
-        .map(a => ({
-          Matrícula: a.matricula,
-          Nombre: a.nombre,
-          Carrera: a.carrera,
-          "Correo institucional": a.email
-        }));
+      let filteredUsers = Object.values(users);
+      if (carrera) {
+        filteredUsers = filteredUsers.filter(user => user.carrera === carrera);
+      }
 
-      const wb = XLSX.utils.book_new();
-      const ws = XLSX.utils.json_to_sheet(datos);
-      XLSX.utils.book_append_sheet(wb, ws, "Alumnos");
+      if (filteredUsers.length === 0) {
+        alumnosTableContainer.innerHTML = "<p style='text-align: center; margin: 20px;'>No hay alumnos registrados en esta carrera.</p>";
+        return;
+      }
 
-      const fecha = new Date().toISOString().slice(0,10);
-      XLSX.writeFile(wb, Alumnos_\( {carrera}_ \){fecha}.xlsx);
+      let tableHTML = `
+        <table>
+          <thead>
+            <tr>
+              <th>Matrícula</th>
+              <th>Nombre</th>
+              <th>Carrera</th>
+              <th>Correo Institucional</th>
+            </tr>
+          </thead>
+          <tbody>
+      `;
+
+      filteredUsers.forEach(user => {
+        tableHTML += `
+          <tr>
+            <td>${user.matricula || '---'}</td>
+            <td>${user.nombre || '---'}</td>
+            <td>${user.carrera || '---'}</td>
+            <td>${user.email || '---'}</td>
+          </tr>
+        `;
+      });
+
+      tableHTML += `
+          </tbody>
+        </table>
+      `;
+
+      alumnosTableContainer.innerHTML = tableHTML;
+    }
+
+    carreraSelect.addEventListener("change", async (e) => {
+      const carrera = e.target.value;
+      const users = await getUsers();
+      renderTable(users, carrera);
     });
 
-    // INICIAR
-    cargarAlumnos();
+    // Cargar todos los alumnos al inicio
+    (async () => {
+      const users = await getUsers();
+      renderTable(users);
+    })();
   </script>
 </body>
 </html>
