--- a/lista-alumnos.html
+++ b/lista-alumnos.html
@@ -163,7 +163,7 @@
     </footer>
   </div>
   <script>
-    const DB_URL = "https://boletos-66dac-default-rtdb.firebaseio.com/users.json";
+    const DB_URL = "https://boletos-66dac-default-rtdb.firebaseio.com/";
     const selectCarrera = document.getElementById("carreraSelect");
     const tablaBody = document.getElementById("tablaBody");
     const tablaAlumnos = document.getElementById("tablaAlumnos");
@@ -263,3 +263,4 @@
   </script>
 </body>
 </html>
+
