--- a/lista-alumnos.html
+++ b/lista-alumnos.html
@@ -156,7 +156,7 @@
         </tbody>
       </table>
       <div class="total" id="totalAlumnos">Total: 0 alumnos</div>
-    </div>
+    </div>s
     <footer>
       Sistema de Boletos • Graduación 2025<br>
       Desarrollado con amor para la mejor generación
@@ -263,4 +263,5 @@
   </script>
 </body>
 </html>
+
 
