--- a/lista-alumnos.html
+++ b/lista-alumnos.html
@@ -168,7 +168,7 @@
   </div>
   <script>
     // URL de Firebase (asegúrate de que termine en /users.json)
-    const DB_URL = "https://boletos-66dac-default-rtdb.firebaseio.com/users.json";
+    const DB_URL = "https://boletos-66dac-default-rtdb.firebaseio.com/";
 
     const selectCarrera = document.getElementById("carreraSelect");
     const tablaBody = document.getElementById("tablaBody");
@@ -286,3 +286,4 @@
   </script>
 </body>
 </html>
+
